kubernetes/templates/deplyment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: amazon
  name: amazon-app-deployment
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: amazon-app
  replicas: 3
  template:
    metadata:
      labels:
        app.kubernetes.io/name: amazon-app
    spec:
      containers:
        - name: amazon-e
          image: namanss/amazon:latest
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
            limits:
              memory: "256Mi"
              cpu: "500m"
