kubernetes/templates/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: amazon-ingress
  namespace: amazon
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
       paths:
       - pathType: Prefix
         path: "/"
         backend:
           service:
             name: amazon-app-svc
             port: 
               number: 80
